# CppLox

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
examples/: deep.lox  factorial.lox  lox_fun.lox  main2.lox  main3.lox  main3.py  rule110.cpp  rule110.lox  rule110.py
src/: CMakeLists.txt  main.cpp
src/lox/: AstPrinter.hpp  BuiltinFunctions.hpp  CMakeLists.txt  CustomTraits.h  Environment.cpp  Environment.h  ErrorManager.cpp  ErrorManager.h  Expression.h  ExpressionVisitor.hpp  Interpreter.cpp  Interpreter.h  LiteralUtils.cpp  LiteralUtils.h  Lox.cpp  Lox.h  LoxObject.hpp  LoxVal.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Statement.h  StmtVisitor.hpp  Token.cpp  Token.h  UserFunction.cpp  UserFunction.h  VisitorUtils.hpp
tests/: AstVisitor_t.cpp  CMakeLists.txt  IntegrationTests_t.cpp
